--- a/studentmanagment/Views/Auth/Register.cshtml
+++ b/studentmanagment/Views/Auth/Register.cshtml
@@ -36,7 +36,8 @@
             }
 
             <p class="text-center mt-4">
-                Already have an account? <a href="@Url.Action("Login", "Auth")" class="text-decoration-none">Login</a>
+                Already have an account?
+                <a href="@Url.Action("Login", "Auth")" class="text-decoration-none">Login</a>
             </p>
         </div>
     </div>
