--- a/studentmanagment/Views/Shared/_Layout.cshtml
+++ b/studentmanagment/Views/Shared/_Layout.cshtml
@@ -75,6 +75,12 @@
 							<span class="align-middle">Categories</span>
 						</a>
 					</li>
+					<li class="sidebar-item">
+						<a class="sidebar-link" asp-controller="Users" asp-action="Index">
+							<i class="align-middle" data-feather="tag"></i>
+							<span class="align-middle">Users</span>
+						</a>
+					</li>
 				</ul>
 
 
